# tensor-inference-engine

./: .gitignore  CMakeLists.txt  README.md  arena.cpp  arena.h  compile_flags.txt  kernels.cpp  kernels.h  main.cpp  model.onnx  model.onnx.data  model_inline.onnx  onnx_weight_loader.py  registry.cpp  registry.h  tensor.cpp  tensor.h  test_build  toy.onnx  toy.onnx.data
.claude/: settings.local.json
benchmarks/: bench_gemm.cpp  bench_pytorch.py
src/: onnx_loader.cpp
tests/: test_embedding_lookup.cpp  test_gemm.cpp  test_layernorm.cpp  test_relu.cpp  test_silu.cpp  test_softmax.cpp
